# paddle

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native.cpp  ocr_crnn_process.cpp
app/src/main/java/com/paddle/ocr/app/: AppCompatPreferenceActivity.java  MainActivity.java  OCRPredictorNative.java  OcrResultModel.java  Predictor.java  SettingsActivity.java  Utils.java
app/src/main/res/values/: strings.xml
